# Raytracer

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  note.txt
app/: io_ocv.h  main.cpp  objet.h  pixel.h
include/: array_1x3.h  color.h  io_ocv.h  light.h  objet.h  pixel.h  point.h  ray.h  raytracer.h  scene.h  sphere.h  vector.h
include/geometry/: array_1x3.h  cylinder.h  point.h  ray.h  sphere.h  vector.h
